TASK: Fix Video Codes not showing in SolutionApp when no custom codes where created; Fix text colorization of MediaItems

--- a/api/assets/scss/Composites/VideoEditor/MediaItems.scss
+++ b/api/assets/scss/Composites/VideoEditor/MediaItems.scss
@@ -52,6 +52,8 @@
 
     text-align: center;
     color: $theme__color__grey--darker;
+    text-shadow: 1px 1px 1px $theme__color__white, 1px -1px 1px $theme__color__white, -1px 1px 1px $theme__color__white,
+        -1px -1px 1px $theme__color__white;
     font-size: 1rem;
 
     background-color: transparentize($theme__color__white, 0.2);
@@ -65,6 +67,8 @@
     &:hover {
         background-color: transparentize($theme__color__white, 0.3);
         color: $theme__color__black;
+        text-shadow: 1px 1px 1px $theme__color__white, 1px -1px 1px $theme__color__white,
+            -1px 1px 1px $theme__color__white, -1px -1px 1px $theme__color__white;
     }
 
     &--highlight {
@@ -73,6 +77,8 @@
         border-right: 1px solid transparentize($theme__color__green--light, 0.5);
 
         color: $theme__color__white;
+        text-shadow: 1px 1px 1px $theme__color__black, 1px -1px 1px $theme__color__black,
+            -1px 1px 1px $theme__color__black, -1px -1px 1px $theme__color__black;
 
         z-index: 100;
     }
